src/cypd.css
/* ... */
 ::-webkit-scrollbar-track {
    /* Track */
    background: rgba(108, 151, 158, 0.376);
}

 ::-webkit-scrollbar-thumb {
    /* Handle */
    background: var(--default-cyp-blue-light);
}

 ::-webkit-scrollbar-thumb:hover {
    /* Handle on hover */
    background: var(--default-cyp-blue-hover);
}

 ::-webkit-scrollbar-thumb:active {
    /* Handle on hover */
    background: var(--default-cyp-blue-active);
}


/* cypd layout */

.cypd-layout-header {
    background-color: white;
    text-align: center;
    height: var(--default-header-height);
    padding: 10px;
}

.cypd-layout-navigation {
    background-color: var(--default-cyp-blue-active);
    height: var(--default-nav-height);
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
}

.cypd-layout-content {
    display: flex;
    flex-direction: row;
    height: var(--default-content-height);
}

.cypd-layout-content:after {
    content: '';
    display: table;
    clear: both;
}

.column {
    position: relative;
    overflow: visible;
    transition: width var(--default-transition-duration);
    transition-delay: 0ms;
}

.column.left {
    width: 2px;
    align-self: stretch;
    background-color: black;
    margin-right: var(--default-left-collapser-width);
    border-right: 1.3px solid rgb(153, 153, 153);
}

.column.right {
    margin-right: var(--default-right-collapser-width);
    border-left: 1.3px solid rgb(153, 153, 153);
}

.column .cypd-layout-column-wrapper {
    position: relative;
    flex-grow: 2;
    height: 100%;
    z-index: 7;
    transition: transform var(--default-transition-duration);
    transition-delay: calc(var(--default-transition-duration) / 2);
}

.column.left .cypd-layout-column-wrapper {
    transform: translateX(calc(-1 * var(--default-leftsider-width)));
}

.column.right .cypd-layout-column-wrapper {
    transform: translateX(var(--default-rightsider-width));
}

.column .collapser {
    position: absolute;
    height: 60px;
    top: calc(100% - 90px);
    z-index: 5;
    cursor: pointer;
}

.column.left .collapser {
    width: var(--default-left-collapser-width);
    right: calc(-1 * var(--default-left-collapser-width) + 1px);
    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='20px' height='60px' overflow='visible'><path d='M3 3 9 3 9 3 Q 12 3 12 6 12 6 12 54 Z' stroke='black' fill='black'/><path d='M12 54 Q 12 57 9 57 9 57 3 57 Z' stroke='black' fill='black'/><path d='M3 57 3 3 12 54 Z' stroke='black' fill='black'/><path d='M3 3 A 3 3, 0, 0, 1, 0 0 L 0 3 Z' stroke='black' fill='black'/><path d='M3 57 A 3 3, 0, 0, 0, 0 60 L 0 57 Z' stroke='black' fill='black'/><path d='M0 3 3 3 3 57 0 57 Z' stroke='black' fill='black'/><polyline points='3,24 3,36 8,30' fill='white'/></svg>");
}

.column.right .collapser {
    width: var(--default-right-collapser-width);
    left: calc(-1 * var(--default-right-collapser-width) + 1px);
    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='20px' height='60px' overflow='visible'><path d='M 6 3 Q 3 3 3 6 Z' stroke='black' fill='black'/><path d='M 3 6 3 54 Q 3 57 6 57 Z' stroke='black' fill='black'/><path d='M 3 6 6 57 6 3 Z' stroke='black' fill='black'/><path d='M12 3 A 3 3, 0, 0, 0, 15 0 L 15 3 Z' stroke='black' fill='black'/><path d='M12 57 A 3 3, 0, 0, 1, 15 60 L 15 57 Z' stroke='black' fill='black'/><path d='M15 3 15 57 6 57 6 3 Z' stroke='black' fill='black'/><polyline points='12,24 12,36 7,30' fill='white'/></svg>");
}

.column.left.visible {
    width: var(--default-leftsider-width);
    flex-shrink: 0;
    transition-delay: calc(var(--default-transition-duration) / 2);
}

.column.right.visible {
    width: var(--default-rightsider-width);
    margin-left: var(--default-right-collapser-width);
}

.column.visible .cypd-layout-column-wrapper {
    transform: none;
    transition-delay: 0ms;
}

.column.middle {
    flex-grow: 5;
    overflow: hidden;
    padding: 10px 10px 10px 10px;
}

.column.middle.collapsed {
    transition-delay: calc(var(--default-transition-duration) / 2);
}

.cypd-layout-footer {
    background-color: var(--default-cyp-blue-active);
    text-align: center;
    width: 100%;
    height: var(--default-footer-height);
}

@media (max-width: 800px) {
    .column {
        position: absolute;
        height: calc(100% - var(--default-header-height) - var(--default-nav-height));
    }
    .column.left {
        z-index: 21;
    }
    .column.middle {
        width: 100%;
    }
    .column .collapser {
        top: calc(100% - var(--default-header-height) - var(--default-nav-height) - 90px);
    }
}


/* cypd table */

.cypd-table-container {
    padding: 10px;
    width: 100%;
}

.cypd-table-container .table-wrapper {
    border-radius: 5px;
    border: 1px solid var(--default-cyp-blue-active);
    /* cursor: pointer; */
    background: white;
    transition: box-shadow 100ms ease-in-out;
}

.cypd-table-container .table-wrapper.show-empty {
    min-height: 150px;
    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100px' height='100px' overflow='visible'><ellipse cx='50' cy='70' rx='30' ry='5' stroke='%none' fill='rgba(170,170,170,0.125)' /><path d='M25 55 35 40 65 40 75 55' stroke='rgba(170,170,170,0.5)' fill='none' stroke-linejoin='round' /><path d='M75 55 60 55 58 60 42 60 40 55 25 55 25 70 75 70 Z' stroke='rgba(170,170,170,0.5)' fill='rgb(238,238,238)' stroke-linejoin='round' /><text x='50' y='95' fill='rgba(170,170,170,0.5)' text-anchor='middle'>No Data</text></svg>");
    background-repeat: no-repeat;
    background-position: center center;
}

.cypd-table-container .cypd-table {
    display: table;
    border-collapse: collapse;
    width: 100%;
}

.cypd-table-container .cypd-table .row {
    display: table-row;
}
/* ... */

